fix: fix price div position on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -249,7 +249,7 @@ h3 {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  margin: 45px 5px;
+  margin: 15px 5px;
   position: relative;
   margin-bottom: 1px;
   transition: all .2s ease-in;
@@ -314,7 +314,7 @@ h3 {
   font-weight: bold;
   color: black;
   position: absolute;
-  top: -30px;
+  top: -10px;
   width: 100%;
   text-align: center;
 }
@@ -565,6 +565,9 @@ footer hr {
   }
   .grid-item {
    margin: 20px 10PX;
+  }
+  .item-price{
+    top: -30px;
   }
   .tool {
     display: block;
